--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 
     "autoload": {
         "psr-4": {
-            "Mworx\\VehicleService\\": "src/"
+            "Mworx\\VehicleService\\": "src/",
+            "Mworx\\VehicleService\\Tests\\": "tests/"
         }
     }
 
