--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,11 @@ web:
     links:
      - db
     environment:
-        - DB_HOST: "localhost"
-        - DB_NAME: ""
-        - DB_DRIVER: "PDO"
-        - DB_USER: "root"
-        - DB_PASS: "root"
+     - DB_HOST=localhost
+     - DB_DRIVER=PDO
+     - DB_USER=root
+     - DB_PASS=root
 db:
     image: mysql
     environment:
-     - MYSQL_ROOT_PASSWORD: "root"
+     - MYSQL_ROOT_PASSWORD=root
