--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
+db:
+    image: mysql
+    environment:
+     - MYSQL_ROOT_PASSWORD=root
+     - MYSQL_DATABASE=mworx
 web:
     build: .
     ports:
      - "5000:80"
     links:
-     - db
+        - db:database
     environment:
-     - DB_HOST=localhost
-     - DB_DRIVER=PDO
+     - DB_HOST=database
+     - DB_DRIVER=pdo_mysql
      - DB_USER=root
-     - DB_PASS=root
-db:
-    image: mysql
-    environment:
-     - MYSQL_ROOT_PASSWORD=root
+     - DB_PASSWD=root
+     - DB_SCHEMA=mworx
+    volumes:
+     - ./:/app
+
