Updated composer.json namespace

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mkaczorowski/basic-service",
+    "name": "mkazz/basic-service",
     "description": "Matt Kaczorowski's basic microservice",
     "authors": [
         {
