--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "4.8.*@dev"
+        "phpunit/phpunit": "7.0.2"
     },
 
     "autoload": {
